RESOLVED FIXED29276
REGRESSION(r48334): WebKit crashes on file select by drag
https://bugs.webkit.org/show_bug.cgi?id=29276
Summary REGRESSION(r48334): WebKit crashes on file select by drag
Ain Tohvri
Reported 2009-09-15 11:52:58 PDT
Created attachment 39608 [details] Crash log Steps to reproduce: 1. Sign in to WebKit Bugzilla 2. Go to create a new bug report 3. Click 'Add an attachment' 4. Drag a file to file input to select a file 5. WebKit crashes
Attachments
Crash log (37.90 KB, text/plain)
2009-09-15 11:52 PDT, Ain Tohvri
no flags
patch (1.80 KB, patch)
2009-09-17 21:19 PDT, Sam Weinig
adele: review+
Mark Rowe (bdash)
Comment 1 2009-09-15 12:15:37 PDT
This must be a recent regression. I dragged some patches to the file button yesterday with a build from Friday without hitting a crash.
Mark Rowe (bdash)
Comment 2 2009-09-15 21:49:16 PDT
Sam Weinig
Comment 3 2009-09-17 21:19:49 PDT
Sam Weinig
Comment 4 2009-09-17 22:22:06 PDT
This should have a test. I will work on one tomorrow. Patch landed in r48500.
Eric Seidel (no email)
Comment 5 2009-09-17 22:43:12 PDT
Comment on attachment 39747 [details] patch Can't we test this? I'm surprised this doesn't have a test given eventSender.beginDragWithFiles()
Eric Seidel (no email)
Comment 6 2009-09-17 22:43:32 PDT
Ah, nm, now I see your comment above.
Sam Weinig
Comment 7 2009-09-18 11:02:39 PDT
Test and extended fix landed in r48515.
Ain Tohvri
Comment 8 2009-09-18 22:44:36 PDT
Yup, works for me as well in the latest r48518. Great job!
Note You need to log in before you can comment on or make changes to this bug.