Fix for https://bugs.webkit.org/show_bug.cgi?id=29276 REGRESSION(r48334): WebKit crashes on file select by drag

Reviewed by Adele Peterson.

Document.elementFromPoint now takes point in client space, not page space.

* page/DragController.cpp:
(WebCore::DragController::tryDocumentDrag):
(WebCore::DragController::concludeEditDrag):



Canonical link: https://commits.webkit.org/40065@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48500 268f45cc-cd09-0410-ab3c-d52691b4dbfc